src/test/ui/suggestions/issue-101984.stderr
error[E0308]: mismatched types
  --> $DIR/issue-101984.rs:21:13
   |
LL |         let (cmp, router) = self.router.at()?;
   |             ^^^^^^^^^^^^^   ----------------- this expression has type `Match<&(for<'r> fn(&'r ()), Box<Wrapper>)>`
   |             |
   |             expected struct `Match`, found tuple
   |
   = note: expected struct `Match<&(for<'r> fn(&'r ()), Box<Wrapper>)>`
               found tuple `(_, _)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
